<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/product"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:contentDescription="@string/ProductSeeing"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/componente_amd_ryzen_5_5600" />

                <View
                    android:id="@+id/separator"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"

                    android:alpha="0.6"
                    android:background="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/price"
                    style="?android:attr/textAppearanceLarge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="324,12€"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textSize="45sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/content"
                style="?android:attr/textAppearanceLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="AMD Ryzen 5 5600 3.5 GHz Box"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>