...
    <string name="title_category_list">Category List</string>
    <string name="title_category_detail">Category Detail</string>
    <string name="title_product_list">Products</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="item_content">Item Content</string>
    <string name="item_details">Item Details</string>
    <string name="iniciar_registrarse">Iniciar | Registrarse</string>
    <string name="likebutton">Like Button</string>
    <string name="logout">Logout</string>
    <string name="ProductSeeing">Product Seeing</string>
    <string name="detailsSample">Características
Latencia CAS: 16
Memoria interna: 16 GB
Tipo de memoria interna: DDR4
Velocidad de memoria del reloj: 3200 MHz
Componente para: PC/servidor
Forma de factor de memoria: 288-pin DIMM
Diseño de memoria (módulos x tamaño): 2 x 8 GB
Tipo de enfriamiento: Disipador térmico</string>
    <string name="Favorites">Favoritos</string>
    <string name="caracteristicas">Características</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="username">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="register">Crear cuenta</string>
    <string name="new_client">¿Eres cliente nuevo?</string>
...
