...
                android:text="@string/caracteristicas"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toBottomOf="@id/price_and_fav"

                />
            <LinearLayout
                android:id="@+id/price_and_fav"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginEnd="15dp">

                    <ToggleButton
                        android:id="@+id/likeButton"
                        style="@android:style/Widget.Material.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="12dp"
...
